fix(test): stream 간결화 #5